log

Tue 15 Aug 2023 02:32:28 AM UTC: 
 tests:  0|7
total_score: 0/70
225c0b5
Tue 15 Aug 2023 02:33:25 AM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:26:1: error: expected identifier or ‘(’ before ‘}’ token
   26 | }
      | ^
Compilation failed
b0d7d37
Tue 15 Aug 2023 02:33:33 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 10/70
64eb77c
